adding more to index and style

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                             <ul>
                                 <li><a href="#">Friends</a></li>
                                 <li><a href="#">Groups</a></li>
-                                <li><a href="#">Trending</a></li>
                                 <li><a href="#">Settings</a></li>
                             </ul>
+                            <input type="button" class="user" value="User">
                         </div>
                     </nav>
                 </div>
