--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
         <script src="assets/script/index.js" defer></script>
+        <script src="assets/script/user.js" defer></script>
+        <script src="assets/script/subscriber.js" defer></script>
         <title>Fake social media</title>
     </head>
     <body>
@@ -44,6 +46,10 @@
                                             <div class="form-group">
                                                 <label for="full-name">Full Name</label>
                                                 <input type="text" placeholder="Enter your full name">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="username">Username</label>
+                                                <input type="text" placeholder="Enter your username">
                                             </div>
                                             <div class="form-group">
                                                 <label for="email">Email</label>
